# ros2_urdf_web_viewer

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
launch/: viewer.launch.py
robot_web_assembly/: __init__.py  run_server.py
ros2_urdf_web_viewer/: __init__.py  asset_server.py  run_server.py
tests/: __init__.py  test_asset_server.py  test_run_server.py  test_static_package_assets.py
web/: app.js  index.html  styles.css
web/config/: assembly-presets.json
