<?xml version="1.0"?>
<package format="3">
  <name>ros2_urdf_web_viewer</name>
  <version>0.1.0</version>
  <description>Browser-based ROS 2 URDF web viewer using rosbridge, roslibjs, Three.js, and urdf-loader.</description>
  <maintainer email="shkwon98@snu.ac.kr">Sunghyun Kwon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
