<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_web_assembly</name>
  <version>0.1.0</version>
  <description>Live browser-side robot assembly and URDF visualization for ROS 2.</description>
  <maintainer email="shkwon98@snu.ac.kr">Sunghyun Kwon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
